k8s/overlays/openshift-dev/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: banking-app
  labels:
    app: api-service
spec:
  selector:
    app: api-service
  ports:
    - name: http
      port: 3000
      targetPort: http
